--- a/manifest.json
+++ b/manifest.json
@@ -3,15 +3,15 @@
   "author": "Zendesk",
   "version": "2.0.123",
   "api_version": 2,
-  "default_locale": "en-us",
+  "default_locale": "fr",
   "settings": [{
-      "label": "Type d'environnement",
+      "label": "enviro_type",
       "variables": [
 	  {
-          "identifier": "Recette",
+          "identifier": "recette",
           "type": "checkbox",
-          "description": "Recette",
-          "label": "Recette ?",
+          "description": "recette",
+          "label": "recette",
 		  "value": false
         }
 		]
